--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -77,4 +77,61 @@ def response_for_path(path):
 3. 路径处理函数第二步：具体的内容
 >每个路径处理函数，不管是图片还是其他内容，都是由 **响应头部 + body** 组成。
 
+4. 参数传递
+
+get 和 post 都可以传递参数，get 参数从 query 传入，post 参数从 body 传入，格式一样
+
 ## web 3: 继续改进服务器套路，成为简单的服务器框架。
+
+**static/**: 存放静态文件
+**templates/**: 存放页面模板文件
+**server**: 建立连接，解析请求，根据请求路径，返回相应的响应
+**models**: 对象数据模型。 增删改查，保存，打开。 对象的方法。 如：用户类的验证，注册， 登录， 角色的判断等。
+**routes**: 具体的路由和响应的内容
+**utils**: 工具函数，log， 自定义time显示格式，jinja2 的 template() 的封装，等等
+
+## web 4: cookie 和 session。
+
+1. 实现记录用户状态的功能。由服务器指定，浏览器每次请求时会自动带上的一串随机字符串。
+```
+session = {}
+xxx=fsdafj678yfkdsjalf
+# session 可以设置为:
+session_id = uuid.uuid4() # 也可以自定义一个随机字符串
+session[session_id] = username/userid
+headers['Set-Cookie'] = 'user={}'.format(session_id)
+# headers['Set-Cookie'] = 'token={}'.format(session_id)
+```
+
+2. session 持久化
+    a. 把 session 保存到文件
+    b. 对称加密
+
+## web 5: todo 应用
+
+1. todo 的增删改更新。
+2. login_required(): 用户登录后才能访问的内容，需要先判断是否登录。
+
+
+
+## web 6: jinja2 模板的应用
+
+1. jinja2 模板的应用、语法
+
+```
+path = '{}/templates/'.format(os.path.dirname(__file__))
+loader = FileSystemLoader(path)
+env = Environment(loader=loader)
+
+def template(path, **kwargs):
+    t = env.get_template(path)
+    return t.render(**kwargs)
+```
+
+2. log 日志写入文件
+
+指定 print函数的参数: file=f
+
+3. 模板文件重写 user login 和 register 页面
+
+## web 7: 摘要算法
