更新后端笔记

--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -120,6 +120,8 @@ headers['Set-Cookie'] = 'user={}'.format(session_id)
 
 2. login_required(): 用户登录后才能访问的内容，需要先判断是否登录。
 
+3. 每个登录的用户只能看到、修改自己创建的 todo。
+
 
 
 ## web 6: jinja2 模板的应用
@@ -143,3 +145,36 @@ def template(path, **kwargs):
 3. 模板文件重写 user login 和 register 页面
 
 ## web 7: 摘要算法
+
+1. 使用 hashlib 对用户密码进行加密。
+
+```
+def hash_pwd(pwd):
+    import hashlib
+    p = pwd.encode('ascii')
+    s = hashlib.md5(p)
+    return s.hexdigest()
+
+# 加盐
+def salted_password(pwd, salt='fd;9823>^&fda'):
+    import hashlib
+    def hashed_pwd(ascii_str):
+        return hashlib.sha256(ascii_str.encode('ascii')).hexdigest()
+    hash1 = hashed_pwd(pwd)
+    hash2 = hashed_pwd(hash1 + salt)
+    return hash2
+```
+
+2. 彩虹表
+
+3. 数据库的索引，需要按用户名查找，就把用户名和id建立一个索引。
+
+4. 程序的拆分，python 包的使用。
+
+5. server 用多线程重写。
+
+```
+import _thread
+
+_thread.start_new_thread(func, (connection, ))
+```
