更新前端笔记，bootstrap的学习

--- a/notes/前端笔记.md
+++ b/notes/前端笔记.md
@@ -1,4 +1,4 @@
-今天收获 2018-9-18：
+## 今天收获 2018-9-18：
 1. 域名解析完成；服务器登录成功；
 2. css 实现两列布局。固定宽度与自适应宽度；
 
@@ -19,3 +19,35 @@
 >问题：
 >1. rem: 相对于根元素(即html元素)font-size计算值的倍数;
 2. vh : 视窗高度分为 100 vh
+
+## 今天收获 2018-9-19：
+1. 后端 web 服务器框架的组成，功能和文件的拆分；
+2. 把 todo 程序放到服务器上运行了一下。
+3. 摘要算法与 python 的多线程 _thread `_thread.start_new_thread(func, (connection, ))`
+4. bootstrap 框架
+
+```
+1. 文件的引入，必须有 rel="stylesheet", 否则无法使用；
+2. 页面组件必须包含在 .container 或 .container-fluid 容器中。前者宽度固定，后者宽度100%。
+3. 根据 bootstrap 的文档，页面可以有以下几部分重点组件（全局样式）：
+    3.1 排版：标题、段落、内联文本、对齐、大小写、缩略语、地址、引用、列表；
+    3.2 代码：内联代码、用户输入、基本代码块、程序输出；
+    3.3 表格：基本表格、条纹表格、带边框、鼠标悬停、紧缩表格、状态类、响应式；
+    3.4 表单：基本表单、内联表单、水平排列、焦点状态、禁用、校验状态、尺寸；
+    3.5 按钮：类按钮（a、input.submit、input.button、button)、预定义样式、尺寸、激活状态；
+    3.6 图片：响应式图片、形状（圆角、圆形、thumbnail 缩略图）；
+```
+
+> Less 是什么？ Saas 是什么？ mixin是什么？
+
+> 栅格系统：
+- “行（row）”必须包含在 .container （固定宽度）或 .container-fluid （100% 宽度）中，以便为其赋予合适的排列（aligment）和内补（padding）。
+- 通过“行（row）”在水平方向创建一组“列（column）”。
+- 内容应当放置于“列（column）”内，并且，只有“列（column）”可以作为行（row）”的直接子元素。
+- 类似 .row 和 .col-xs-4 这种预定义的类，可以用来快速创建栅格布局。
+- 通过为“列（column）”设置 padding 属性，从而创建列与列之间的间隔（gutter）。通过为 .row 元素设置负值 margin 从而抵消掉为 .container 元素设置的 padding，也就间接为“行（row）”所包含的“列（column）”抵消掉了padding。
+- 负值的 margin就是下面的示例为什么是向外突出的原因。在栅格列中的内容排成一行。
+- 栅格系统中的列是通过指定1到12的值来表示其跨越的范围。例如，三个等宽的列可以使用三个 .col-xs-4 来创建。
+- 如果一“行（row）”中包含了的“列（column）”大于 12，多余的“列（column）”所在的元素将被作为一个整体另起一行排列。
+
+> 媒体查询是什么？
