更新后端笔记

--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -178,3 +178,94 @@ import _thread
 
 _thread.start_new_thread(func, (connection, ))
 ```
+
+## web 8: 数据库的使用
+
+数据库的使用应熟悉基本的增删改查操作。
+
+1. sqlite3 / mySQL
+
+2. MongoDB
+
+```
+pip3 install pymongo
+
+
+```
+
+## ## web 9: 前端基础
+
+js、DOM、BOM、事件、操作页面元素。（绑定事件、事件委托）event.target
+
+## web 10: ajax
+
+1. 前后端的交互使用 json 数据格式。
+前端发送的数据，在body中以json格式发送。之前的处理中，request中以 POST 发送的数据，经处理后，以form（字典）的形式传送，用JSON格式传送时，直接把request的body本身就是JSON格式，用（`json.loads(self.body)`）解析成 字典或列表，后端就可以直接使用。
+
+2. 后端发送给前端数据时，比如 todo 的内容，基类 Model 自定义json方法，返回 model 的字典表示，（`return self.__dict__.copy()`），然后做接口时，以json格式返回给前端，
+
+```
+def json_response(data):
+    header = 'HTTP/1.1 200 OK\r\nContent-Type: application/json\r\n'
+    body = json.dumps(data, ensure_ascii=False, indent=2)
+    r = header + '\r\n' + body
+    return r.encode('utf-8')
+
+```
+比如 todo_all 的 api 接口：
+```
+def all(request):
+    todo_list = Todo.all()
+    # todo 要转成 dict 格式，使用了基类的 json 方法
+    todos = [t.json() for t in todo_list]
+    return json_response(todos)
+```
+
+前端接收到数据后，直接解析就可以用：
+```
+// 使用 ajax 发送请求给后端
+// 接收到后端返回的数据，解析成数组
+todos = JSON.parse(r)
+// 遍历数组，取出数据
+for(var i = 0; i < todos.length; i++) {
+    todo = todos[i]
+    ...
+}
+```
+
+3. ajax 请求
+
+```
+var ajax = function(method, path, data, responseCallback) {
+    var r = new XMLHttpRequest()
+    r.open(method, path, true)
+    r.setRequestHeader('Content-Type', 'application/json')
+    r.onreadystatechange = function() {
+        if(r.readyState == 4) {
+            // r.response 就是服务器发送来的在 body 中的数据
+            responseCallback(r.response)
+        }
+    }
+    data = JSON.stringify(data)
+    r.send(data)
+}
+```
+
+使用时：
+```
+// path 是后端接口，在 callback 中接收到后端返回的数据后再下一步操作
+ajax('GET', path, '', callback)
+ajax('POST', path, form, callback)
+
+apiTodoAll(function(r) {
+    // r 就是服务器发送来的数据
+    var todos = JSON.parse(r)
+    ...
+})
+
+apiTodoAdd(form, function(r) {
+    // r 就是服务器发送来的数据
+    var todo = JSON.parse(r)
+    ...
+})
+```
