更新笔记。flask处理ajax请求。

--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -193,7 +193,7 @@ pip3 install pymongo
 
 ```
 
-## ## web 9: 前端基础
+## web 9: 前端基础
 
 js、DOM、BOM、事件、操作页面元素。（绑定事件、事件委托）event.target
 
@@ -269,3 +269,11 @@ apiTodoAdd(form, function(r) {
     ...
 })
 ```
+
+
+## web 13：flask 应用
+
+放假三天，终于明白了 flask 处理 ajax 的过程。
+
+前端发送 ajax 请求，flask 收到请求后，返回 json 格式数据时，用 `jsonify()` 处理下。对于 ajax 发送的 post 请求，
+flask 收到的数据用 `request.get_json()` 来获得。 **这两点是关键。**
