新增部署笔记

--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -277,3 +277,42 @@ apiTodoAdd(form, function(r) {
 
 前端发送 ajax 请求，flask 收到请求后，返回 json 格式数据时，用 `jsonify()` 处理下。对于 ajax 发送的 post 请求，
 flask 收到的数据用 `request.get_json()` 来获得。 **这两点是关键。**
+
+**部署**
+
+1. 安装 gunicorn 和 supervisor。`apt install name`
+2. 在项目文件夹中新建 wsgi.py 文件。gunicorn需要。
+
+```
+#！/usr/bin/env python3
+
+import sys
+from os.path import abspath
+from os.path improt dirname
+
+<!-- 设置当前目录为工作目录 -->
+sys.path.insert(0, abspath(dirname(__file__)))
+
+ <!-- 引入 app.py -->
+import app
+
+application = app.app
+
+```
+
+3. 新建flask 应用的配置文件.
+
+```
+<!-- /etc/supervisor/conf.d/xxx.conf -->
+
+[program:todo]
+command=/usr/local/bin/gunicorn wsgi --bind 0.0.0.0:2000 --pid /tmp/todo.pid
+directory=/root/www/flask_ajax_todo
+autostart=true
+```
+
+4. 重启 supervisor 完成。
+
+```
+service supervisor restart
+```
