更新服务器部署相关

--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -270,6 +270,17 @@ apiTodoAdd(form, function(r) {
 })
 ```
 
+## web 11
+
+CSS基础：
+postion
+display
+盒模型
+
+## web 12
+
+常用 linux 命令
+
 
 ## web 13：flask 应用
 
@@ -316,3 +327,55 @@ autostart=true
 ```
 service supervisor restart
 ```
+
+## web 14
+
+1. rsa 原理， git 的使用。github desktop 的使用。coding.net 的使用。
+
+2. 生成 ssh 密钥。`ssh-keygen -C mykey` 生成私钥 id_rsa, 公钥 id_rsa.pub。
+
+3. 将公钥添加到服务器 /root/.ssh/authorized_keys 文件中。
+
+```
+cd /root
+mkdir .ssh
+
+nano .ssh/authorized_keys
+```
+
+4. bitvise 中导入私钥，就可以登录服务器了。
+
+5. 服务器初始化
+
+```
+<!-- # 安装 配置 打开 ufw 防火墙 -->
+apt-get install ufw
+ufw allow 22
+ufw allow 80
+ufw allow 443
+ufw default deny incoming
+ufw default allow outgoing
+ufw status verbose  
+ufw enable
+
+<!-- # 安装必备软件 -->
+apt install git python3 python3-pip python3-setuptools supervisor mongodb redis-server zsh nginx
+<!-- # 安装 oh-my-zsh 配置(方便你使用命令行的配置) -->
+wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh
+<!-- # 安装 gunicorn pymongo -->
+pip3 install gunicorn pymongo
+
+
+<!-- # ===
+# 服务器中文编码问题
+# ===
+#
+# 编辑下面的文件, 不要拼错 -->
+nano /etc/environment
+<!-- # 加入下面的内容, 保存退出 -->
+LC_CTYPE="en_US.UTF-8"
+LC_ALL="en_US.UTF-8"
+
+```
+
+## web 15
