--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -320,12 +320,42 @@ application = app.app
 command=/usr/local/bin/gunicorn wsgi --bind 0.0.0.0:2000 --pid /tmp/todo.pid
 directory=/root/www/flask_ajax_todo
 autostart=true
+autorestart=true
 ```
 
 4. 重启 supervisor 完成。
 
 ```
 service supervisor restart
+```
+
+5. 在项目文件夹中新建 supervisor 配置文件，完成后建立软链接来使用。
+
+```
+ln -s source target
+
+ln -s /usr/www/todo/todo.conf /etc/supervisor/conf.d/todo.conf
+
+service supervisor restart
+```
+
+6. 在项目文件夹中新建 nginx 配置文件，完成后建立软链接来使用。
+
+```
+todo.nginx
+
+server {
+    listen 80;
+    location / {
+        proxy_pass http://localhost:2000;
+    }
+}
+
+ln -s /usr/www/todo/todo.nginx /etc/nginx/sites-enabled/todo
+
+service nginx restart
+
+备注：默认 sites-enabled 文件中有个 default 文件，删掉。
 ```
 
 ## web 14
