更新flask 的 session 笔记

--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -408,4 +408,14 @@ LC_ALL="en_US.UTF-8"
 
 ```
 
+6. 使用 coding.net 的私有仓库，存放代码。 在服务器上 clone 该仓库，方便每次修改内容后在服务器上更新网站内容。
+
 ## web 15
+
+flask 的 session。
+
+```
+r = make_response(template)
+r.set_cookie('name', 'value')
+```
+
