更新爬虫、编码、json api笔记

--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -419,3 +419,32 @@ r = make_response(template)
 r.set_cookie('name', 'value')
 ```
 
+## web 16
+
+1. 抓包工具 fiddler
+
+2. 爬虫
+
+    2.1 静态页面
+
+        downloader  requests库
+
+        parsed  pyquery库 lxml
+
+        saveData
+
+        2.2 动态页面(模拟浏览器)
+
+            downloader  PantomJS
+
+            parsed  pyquery库 lxml
+
+            saveData
+
+3. json api
+
+    微服务与json api。
+
+    flask 的 jsonify()。get_json()。
+
+4. RESTFull url：用资源来组织url。
