更新前端 flex 弹性布局

--- a/notes/前端笔记.md
+++ b/notes/前端笔记.md
@@ -51,3 +51,67 @@
 - 如果一“行（row）”中包含了的“列（column）”大于 12，多余的“列（column）”所在的元素将被作为一个整体另起一行排列。
 
 > 媒体查询是什么？
+
+
+## 今天收获 2018-9-27：
+
+flex 弹性布局。
+
+网页布局(layout)是 CSS 的一个重点应用。
+
+> 常见的9中布局方案，实现？
+
+传统方案基于盒模型，依赖display + position + float。新的方案就是 flex 布局。
+
+1. 任何容器都可以指定为 flex 布局
+
+```
+.container {
+    display: flex;
+    display: -webkit-flex; /* webkit 内核需加前缀 */
+}
+```
+
+行内元素也可以使用：
+
+```
+.container {
+    display: inline-flex;
+}
+```
+
+**设为 flex 布局后，子元素的 float、clear 和 vertical-align 属性失效。**
+
+2. 采用 flex 布局的元素为**容器**。子元素称为**项目**。
+
+3. 容器有 6 个属性：
+
+```
+flex-direction: row | row-reverse | column | column-reverse;
+
+flex-wrap: nowrap | wrap | wrap-reverse;
+
+flex-flow: <flex-direction> || <flex-wrap>; /* 为上述两个属性的简写 */
+
+justify-content: flex-start | flex-end | center | space-between | space-around;
+
+align-items: flex-start | flex-end | center | baseline | stretch;
+
+align-content: flex-start | flex-end | center | space-between | space-around; /* 定义多根轴线的对齐方式，只有一根则失效 */
+```
+
+4. 项目也是 6 个属性：
+
+```
+order: <int>; /* 数越小越靠前排 */
+
+flex-grow: <num>; /* 定义项目放大比例 */
+
+flex-shrink: <num>; /* 定义项目缩小比例 */
+
+flex-basis: <length> | auto;
+
+flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ] /* 该属性有两个快捷值：auto (1 1 auto) 和 none (0 0 auto) */
+
+align-self: auto | flex-start | flex-end | center | baseline | stretch; /* 定义单个项目有与其他项目不一样的对齐方式 */
+```
