--- a/notes/前端笔记.md
+++ b/notes/前端笔记.md
@@ -243,3 +243,55 @@ outerWidth() / outerWidth(true)
 
 outerHeight() / outerHeight(true)
 ```
+
+**jQuery 遍历**
+
+1. 祖先
+
+```
+parent()
+
+parents()
+
+parentsUntil()
+```
+
+2. 后代
+
+```
+children()
+
+find()
+```
+
+3. 同胞
+
+```
+siblings(): 所有同胞
+
+next(): 下一个同胞
+
+nextAll(): 所有跟随的同胞
+
+nextUntil(): 介于两者之间的所有跟随的同胞
+
+prev()
+
+prevAll()
+
+prevUntil()
+```
+
+4. 过滤
+
+```
+first()
+
+last()
+
+eq(): 返回被选元素中带有指定索引号的元素
+
+filter()
+
+not()
+```
