jQuery 实现 todo 的新增和删除功能

--- a/notes/前端笔记.md
+++ b/notes/前端笔记.md
@@ -295,3 +295,40 @@ filter()
 
 not()
 ```
+
+## 今天收获 2018-9-30：
+
+**jQuery todo 实现 新增和删除 todo 功能**
+
+```
+$(document).ready(function() {
+    // 插入新的 todo 模板
+    var html = function(todo) {
+        var t = `
+            <div class="todo-cell">
+                <button class="btn-delete">删除</button>
+                <button>编辑</button>
+                <span>${todo}</span>
+            </div>
+        `
+        return t
+    }    
+
+    $('#id-btn-add').on('click', function(){
+        $('#id-input').val(function(i, oldText) {
+            var todoContainer = $('.todo-container')
+            todoContainer.append(html(oldText))
+            // 新增 todo 后将 input 输入框清空
+            return null
+        })
+
+        // 事件委托， 删除 todo
+        $('.todo-cell').on('click', '.btn-delete', function() {
+            $(this).parent().hide()
+        })
+
+    })
+
+})
+
+```
