实现搜索功能

--- a/notes/前端笔记.md
+++ b/notes/前端笔记.md
@@ -330,5 +330,29 @@ $(document).ready(function() {
     })
 
 })
+```
+
+**实现搜索功能，主要分三步**
+
+```
+// 1. 搜索框输入内容时，先将待搜索的内容隐藏，
+// 2. 然后得到搜索框的值，
+// 3. 再遍历待搜索的内容，判断每一个待搜索的内容是否包含搜索框的值，包含就将该内容显示。
+
+$('#title-search').on('keyup', function(event) {
+    var r = $(event.target).val()
+    searchTitle(r)
+})
+
+var searchTitle = function(r) {
+    $('.s-title').hide()
+    $('.s-title').each(function() {
+        var title = $(this)
+        // toLowerCase() 实现模糊搜索
+        if (title.text().toLowerCase().includes(r.toLowerCase())) {
+            title.show()
+        }
+    })
+}
 
 ```
