input的name属性的作用
hidden和display：none的区别

--- a/notes/前端笔记.md
+++ b/notes/前端笔记.md
@@ -356,3 +356,8 @@ var searchTitle = function(r) {
 }
 
 ```
+
+**测试了markdown在线编辑器。input标签不设置name属性，表单提交时不会向后台发送数据。可以多加一个隐藏
+的input，用js设置其值为解析后的html文本，发给后台。**
+
+> HTML 是内容展示带有语义，CSS 是界面样式相关。 `hidden` 和 `display: none` 都可以实现隐藏元素的效果。 `hidden`表示该元素是不相关的、不需要的，这个含义是主要内容，“隐藏”的效果只是附带。`display：none`是从界面、视觉上的隐藏。如果需要临时隐藏一些东西后面会再切换出来，比如 下拉菜单 等，就可以用`display：none`。因为它不是跟用户不相关，只是目前还不能展示出来。
