更新markdown的同步预览功能和全局样式

--- a/notes/前端笔记.md
+++ b/notes/前端笔记.md
@@ -361,3 +361,9 @@ var searchTitle = function(r) {
 的input，用js设置其值为解析后的html文本，发给后台。**
 
 > HTML 是内容展示带有语义，CSS 是界面样式相关。 `hidden` 和 `display: none` 都可以实现隐藏元素的效果。 `hidden`表示该元素是不相关的、不需要的，这个含义是主要内容，“隐藏”的效果只是附带。`display：none`是从界面、视觉上的隐藏。如果需要临时隐藏一些东西后面会再切换出来，比如 下拉菜单 等，就可以用`display：none`。因为它不是跟用户不相关，只是目前还不能展示出来。
+
+## 今天收获 2018-10-1：
+
+1. 完善了markdown编辑器，更新了全局样式，实现了实时预览、光标同步的功能。
+
+2. 将 blog 版块的写博客页面的编辑部分更换为 markdown 模式，测试成功，并部署到了服务器上。
