更新部分笔记内容

--- a/notes/前端笔记.md
+++ b/notes/前端笔记.md
@@ -367,3 +367,11 @@ var searchTitle = function(r) {
 1. 完善了markdown编辑器，更新了全局样式，实现了实时预览、光标同步的功能。
 
 2. 将 blog 版块的写博客页面的编辑部分更换为 markdown 模式，测试成功，并部署到了服务器上。
+
+## 今天收获 2018-10-2：
+
+1. 完成博客后台管理功能。实现写新、修改、删除功能。[博客版块明天加上留言功能，基本上可以满足日常应用了]
+
+2. 优化了修改文章的功能。
+
+3. 服务器上程序更新到最新。
