--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -451,7 +451,7 @@ r.set_cookie('name', 'value')
 
 ## web 19
 
-1. csrf 跨站请求伪造。可以再网页中加入 token 来防范。
+1. csrf 跨站请求伪造。可以在网页中加入 token 来防范。
 
 比如，在首页生成并保存一个 token，用户访问敏感链接时验证此 token，如果 token 存在，则执行用户的操作（用set保存token）；更进一步，可以将token和用户id一起保存，验证时同时验证token是否存在和token与用户id是否一致（用dict保存）。
 
