--- a/notes/后端笔记.md
+++ b/notes/后端笔记.md
@@ -469,3 +469,43 @@ tokens = dict()
 tokens['token'] = u.id
 tokens.pop(token)
 ```
+
+## web 20
+
+文件上传功能：
+
+```
+def allow_file(filename):
+    suffix = filename.split('.')[-1]
+    from config import accept_user_file_type
+    return suffix in accept_user_file_type
+
+
+@main.route('/addimg', methods=["POST"])
+def add_img():
+    u = current_user()
+
+    if u is None:
+        return redirect(url_for(".profile"))
+
+    if 'file' not in request.files:
+        return redirect(request.url)
+
+    file = request.files['file']
+    if file.filename == '':
+        return redirect(request.url)
+
+    if allow_file(file.filename):
+        filename = secure_filename(file.filename)
+        file.save(os.path.join(user_file_director, filename))
+        u.user_image = filename
+        u.save()
+
+    return redirect(url_for(".profile"))
+
+# send_from_directory
+# nginx 静态文件
+@main.route("/uploads/<filename>")
+def uploads(filename):
+    return send_from_directory(user_file_director, filename)
+```
