--- a/notes/前端笔记.md
+++ b/notes/前端笔记.md
@@ -375,3 +375,34 @@ var searchTitle = function(r) {
 2. 优化了修改文章的功能。
 
 3. 服务器上程序更新到最新。
+
+
+## 2018-11-11
+
+文字自动变化颜色
+
+```
+.changeColor {
+    font-size: 36px;
+    font-weight: bold;
+    animation: change 10s linear 0s infinite;
+}
+@keyframes change
+{
+    0% {
+        color:#333;
+    }
+    25% {
+        color:#ff0;
+    }
+    50% {
+        color:#f60;
+    }
+    75% {
+        color:#cf0;
+    }
+    100% {
+        color:#f00;
+    }
+}
+```
